Fix bug while opening profile image edit on user page on mobile

--- a/app/components/userPage/userPage.css
+++ b/app/components/userPage/userPage.css
@@ -192,6 +192,7 @@
         display: block;
         text-align: center;
         height: 110px;
+        z-index: 1;
     }
 
     #userPage .body-container {        
